--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.html
@@ -186,6 +186,7 @@
                         <app-form-criterios-pago    [solicitudPago]="contrato.solicitudPagoOnly"
                                                     [contratacionProyectoId]="contratacionProyectoId"
                                                     [listaMenusId]="listaMenusId"
+                                                    [contrato]="contrato"
                                                     [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
                                                     [tieneObservacion]="tieneObservacion !== undefined ? tieneObservacion : false"
                                                     [tieneObservacionOrdenGiro]="tieneObservacionOrdenGiro"
@@ -250,6 +251,7 @@
                         <app-form-criterios-pago    [solicitudPago]="contrato.solicitudPagoOnly"
                                                     [esPreconstruccion]="false"
                                                     [contratacionProyectoId]="contratacionProyectoId"
+                                                    [contrato]="contrato"
                                                     [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
                                                     [tieneObservacion]="tieneObservacion !== undefined ? tieneObservacion : false"
                                                     [listaMenusId]="listaMenusId"
