--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/ver-detalle-aprobar-solicitud/ver-detalle-aprobar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/ver-detalle-aprobar-solicitud/ver-detalle-aprobar-solicitud.component.html
@@ -54,17 +54,17 @@
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> DRP </th>
                             <td mat-cell *matCellDef="let element; index as i" align="center"> <b> {{ i + 1 }} </b> </td>
                         </ng-container>
-                        <ng-container matColumnDef="numeroDrp">
+                        <ng-container matColumnDef="numDrp">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número DRP </th>
-                            <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDrp }} </td>
+                            <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDRP }} </td>
                         </ng-container>
-                        <ng-container matColumnDef="valorSolicitudDdp">
+                        <ng-container matColumnDef="valor">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-                            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitudDdp | currency:'':'symbol-narrow':'.0-0' }} </td>
+                            <td mat-cell *matCellDef="let element" align="center"> {{ element.valor }} </td>
                         </ng-container>
-                        <ng-container matColumnDef="saldoPresupuestal">
+                        <ng-container matColumnDef="saldo">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
-                            <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPresupuestal | currency:'':'symbol-narrow':'.0-0' }} </td>
+                            <td mat-cell *matCellDef="let element" align="center"> {{ element.saldo }} </td>
                         </ng-container>
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
