--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
@@ -56,15 +56,15 @@
                             </ng-container>
                             <ng-container matColumnDef="numDrp">
                                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número DRP </th>
-                                <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDrp }} </td>
+                                <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDRP }} </td>
                             </ng-container>
                             <ng-container matColumnDef="valor">
                                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-                                <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitudDdp | currency:'':'symbol-narrow':'.0-0' }} </td>
+                                <td mat-cell *matCellDef="let element" align="center"> {{ element.valor }} </td>
                             </ng-container>
                             <ng-container matColumnDef="saldo">
                                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
-                                <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPresupuestal | currency:'':'symbol-narrow':'.0-0' }} </td>
+                                <td mat-cell *matCellDef="let element" align="center"> {{ element.saldo }} </td>
                             </ng-container>
                             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -120,10 +120,6 @@
                             <ng-container matColumnDef="faseContrato">
                                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fase del contrato </th>
                                 <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.faseContrato }} </b> </td>
-                            </ng-container>
-                            <ng-container matColumnDef="pagosRealizados">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Pagos realizados </th>
-                                <td mat-cell *matCellDef="let element" align="center"> {{ element.pagosRealizados !== undefined ? element.pagosRealizados : 0 }} </td>
                             </ng-container>
                             <ng-container matColumnDef="valorFacturado">
                                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor facturado </th>
