--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad/form-registrar-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad/form-registrar-novedad.component.html
@@ -102,7 +102,9 @@
             <div class="col">
               <mat-form-field class="select-width">
                 <mat-select required formControlName="tipoNovedad" #tipoNovedad multiple (selectionChange)="changeTipoNovedad()">
-                  <mat-option *ngFor="let tnovedad of tipoNovedadArray" [value]="tnovedad">
+                  <mat-option *ngFor="let tnovedad of tipoNovedadArray" [value]="tnovedad"
+                  [style.display]="habilitarTipoNovedad(tnovedad)"
+                  >
                     {{ tnovedad.nombreTipoNovedad }}
                   </mat-option>
                 </mat-select>
