--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad/form-registrar-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad/form-registrar-novedad.component.html
@@ -147,9 +147,12 @@
                   formControlName="tipoNovedad"
                   #tipoNovedad
                   multiple
+                  
                   (selectionChange)="changeTipoNovedad()"
                 >
-                  <mat-option *ngFor="let tnovedad of tipoNovedadArray" [value]="tnovedad">
+                  <mat-option *ngFor="let tnovedad of tipoNovedadArray" [value]="tnovedad"
+                  [style.display]="habilitarTipoNovedad(tnovedad)"
+                  >
                     {{ tnovedad.nombreTipoNovedad }}
                   </mat-option>
                 </mat-select>
