--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/detalle-con-disponibilidad-cancelada/detalle-con-disponibilidad-cancelada.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/detalle-con-disponibilidad-cancelada/detalle-con-disponibilidad-cancelada.component.html
@@ -206,6 +206,9 @@
             </mat-accordion>
 
         </mat-expansion-panel>
+        <!--
+            Pedido por Yuly 03/05/2021
+
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title">
@@ -216,6 +219,7 @@
             <app-tabla-proyectos-asociados-cancelada></app-tabla-proyectos-asociados-cancelada>
 
         </mat-expansion-panel>
+        -->
     </mat-accordion>
 
     <div class="botones">
