--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
@@ -335,6 +335,9 @@
             </mat-accordion>
 
         </mat-expansion-panel>
+        <!--
+            Pedido por Yuly 03/05/2021
+
         <mat-expansion-panel class="expansion-style" *ngIf="detailavailabilityBudget?.tipoSolicitudCodigo==pTipoDDP.DDP_tradicional ||
             detailavailabilityBudget?.tipoSolicitudCodigo==pTipoDDP.DDP_administrativo">
             <mat-expansion-panel-header class="expansion-style--header">
@@ -352,6 +355,7 @@
                 *ngIf="detailavailabilityBudget?.tipoSolicitudCodigo==pTipoDDP.DDP_administrativo">
             </app-tabla-gestionar-validacion-administrativo>
         </mat-expansion-panel>
+        -->
     </mat-accordion>
 
     <div class="botones">
