--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/detalle-con-validacion-presupuestal/detalle-con-validacion-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/detalle-con-validacion-presupuestal/detalle-con-validacion-presupuestal.component.html
@@ -331,6 +331,10 @@
             </mat-accordion>
 
         </mat-expansion-panel>
+
+        <!--
+            Pedido por Yuly 03/05/2021
+
         <mat-expansion-panel class="expansion-style"
             *ngIf="false">
             <mat-expansion-panel-header class="expansion-style--header">
@@ -343,6 +347,7 @@
             <app-tabla-gestionar-validacion-administrativo [proyectos]="detailavailabilityBudget?.proyectos" [codigo]="detailavailabilityBudget?.numeroSolicitud"
             *ngIf="detailavailabilityBudget?.tipoSolicitudCodigo==pTipoDDP.DDP_administrativo"></app-tabla-gestionar-validacion-administrativo>
         </mat-expansion-panel>
+        -->
     </mat-accordion>
 
     <div class="botones">
