--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
@@ -47,6 +47,7 @@
                                 [valorNetoGiro]="listData.valorNetoGiro"
                                 [solicitudPago]="solicitudPago"
                                 [esVerDetalle]="esVerDetalle"
+                                [esPreconstruccion]="esPreconstruccion"
                                 (tieneObservacion)="tieneObservacion.emit( true )">
     </app-form-descuentos-gog>
 </section>
