--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
@@ -126,12 +126,12 @@
       </strong>
       {{ novedad.fechaSesionInstancia | date: 'dd/MM/yyyy' }}
     </p>
-    <!-- <p>
+    <p>
       <strong>
-        Tipo de Novedad :
+        Tipo de novedad:
       </strong>
-      Modificación de Condiciones Contractuales
-    </p> -->
+     {{ tipoNovedadNombre }}
+    </p>
 
   </mat-card-content>
 </mat-card>
