--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/ver-detalle-tramite/ver-detalle-tramite.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/ver-detalle-tramite/ver-detalle-tramite.component.html
@@ -25,6 +25,12 @@
       </strong>
       {{ novedad.fechaValidacion | date: 'dd/MM/yyyy' }}
     </p>
+    <p>
+      <strong>
+        Tipo de solicitud:
+      </strong>
+     {{ tipoNovedadNombre }}
+    </p>
     </mat-card-content>
   </mat-card>
 
