--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
@@ -32,7 +32,11 @@
     <!-- estadoNovedad Column -->
     <ng-container matColumnDef="estadoNovedadNombre">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado de la novedad</th>
-      <td mat-cell *matCellDef="let element">{{element.estadoCodigoNombre}}</td>
+      <td mat-cell *matCellDef="let element">
+        <span *ngIf="element.estadoCodigo === '4'">{{element.estadoDescripcion}}</span>
+        <span *ngIf="element.estadoCodigo !== '4'">{{element.estadoCodigoNombre}}</span>
+        
+      </td>
     </ng-container>
 
     <!-- estadoRegistro Column -->
