--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-novedad-contratos-obra/tabla-novedad-contratos-obra.component.html
@@ -48,7 +48,11 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Estado de la novedad
       </th>
-      <td mat-cell *matCellDef="let element">{{element.estadoCodigoNombre}}</td>
+      <td mat-cell *matCellDef="let element">
+        <span *ngIf="element.estadoCodigo !== '16' && element.estadoCodigo !== '7'">{{element.estadoCodigoNombre}}</span>
+        <span *ngIf="element.estadoCodigo === '7'">{{element.estadoDescripcion}}</span>
+        <span *ngIf="element.estadoCodigo === '16'">Con observaciones del equipo de seguimiento</span>
+      </td>
     </ng-container>
 
     <!-- estadoRegistro Column -->
