--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/validar-balance-gbftrec/validar-balance-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/validar-balance-gbftrec/validar-balance-gbftrec.component.html
@@ -1,4 +1,4 @@
-<section class="container text-center">
+<section class="container text-center" *ngIf="data">
     <div class="text-right">
         <a routerLink="/gestionarBalanceFinancieroTrasladoRecursos" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
@@ -6,23 +6,23 @@
     </div>
     <h1 class="title-menu--h1">
         <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
-            Ver detalle balance LL457326
+            Ver detalle balance {{ data.llaveMen }}
         </ng-container>
         <ng-template #noEsVerDetalle>
-            {{ esRegistroNuevo === true ? 'Validar' : 'Ver detalle/Editar' }} balance LL457326
+            {{ esRegistroNuevo === true ? 'Validar' : 'Ver detalle/Editar' }} balance {{ data.llaveMen }}
         </ng-template>  
       </h1>
     <p class="info-sub-title">
-        <span>Número de contrato de obra: <b>N801801</b></span>
-        <span>Número de contrato de interventoría: <b>A513513</b></span>
+        <span>Número de contrato de obra: <b>{{ data.numeroContratoObra }}</b></span>
+        <span>Número de contrato de interventoría: <b>{{ data.numeroContratoInterventoria }}</b></span>
     </p>
     <mat-card class="shipping-card var-main-gris">
         <mat-card-content align="left">
-            <p><strong>Tipo de intervención: </strong><em>Remodelación</em></p>
-            <p><strong>Institución Educativa: </strong><em>I.E Nuestra Señora Del Carmen</em></p>
-            <p><strong>Sede educativa: </strong><em>Única Sede</em></p>
-            <p><strong>Departamento: </strong><em>Boyacá</em></p>
-            <p><strong>Municipio: </strong><em>Susacón</em></p>
+            <p><strong>Tipo de intervención: </strong><em>{{ data.tipoIntervencion }}</em></p>
+            <p><strong>Institución Educativa: </strong><em>{{ data.institucionEducativa }}</em></p>
+            <p><strong>Sede educativa: </strong><em>{{ data.sedeEducativa }}</em></p>
+            <p><strong>Departamento: </strong><em>{{ data.departamento }}</em></p>
+            <p><strong>Municipio: </strong><em>{{ data.municipio }}</em></p>
         </mat-card-content>
     </mat-card>
     <div class="tabs--actions">
