ajustes del word 🧾

--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/detalle-disponibilidad-presupuestal/detalle-disponibilidad-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/detalle-disponibilidad-presupuestal/detalle-disponibilidad-presupuestal.component.html
@@ -68,7 +68,7 @@
                                 </p>
                                 <p>
                                     <b>Valor del aportante:</b>
-                                    {{ aportante.valorTotalAportante | currency }}
+                                    {{ aportante.valorTotalAportante  | currency: 'COP':'symbol-narrow':'.0-0' }}
     
                                 </p>
                             </div>
