--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/informacion-general/informacion-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/informacion-general/informacion-general.component.html
@@ -42,7 +42,7 @@
                 </ng-container>
                 <ng-container matColumnDef="valorSolicitudDdp">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-                    <td mat-cell *matCellDef="let element" align="center"> {{ element.valor }} </td>
+                    <td mat-cell *matCellDef="let element" align="center"> {{ element.valor | currency: 'COP':'symbol-narrow':'.0-0' }} </td>
                 </ng-container>
                 <ng-container matColumnDef="saldoPresupuestal">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo actual DRP</th>
