--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/ver-detalle-ddp-especial/ver-detalle-ddp-especial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/ver-detalle-ddp-especial/ver-detalle-ddp-especial.component.html
@@ -96,7 +96,7 @@
                 </p>
                 <p>
                     <b>Valor:</b>
-                    {{disponibilidadPresupuestal.valorSolicitud}}
+                    {{disponibilidadPresupuestal.valorSolicitud | currency: 'COP':'symbol-narrow':'.0-0'}}
                 </p>
             </mat-card-content>
         </mat-card>
