Debug ProcesosContractuales - ContratosModificacionesContractuales V1 :package:

--- a/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-contratacion/form-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-contratacion/form-contratacion.component.html
@@ -62,18 +62,10 @@
               <p><b>Tipo de contrato</b>: {{ contratacion?.disponibilidadPresupuestal[0]?.opcionContratarCodigo }} </p>
               <p><b>Valor del contrato</b>: {{ contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud | currency:'COP':'symbol-narrow':'.0-0' }}</p>
               <p><b>Plazo</b>: {{ contratacion?.disponibilidadPresupuestal[0]?.plazoMeses }} meses / {{ contratacion?.disponibilidadPresupuestal[0]?.plazoDias }} días</p>
+              <p><b>Url con soporte: </b> {{ contratacion?.rutaMinuta }} </p>
             </mat-card-content>
           </mat-card>
         </div>
-
-      </mat-expansion-panel>
-
-      <mat-expansion-panel class="expansion-style" *ngIf="estadoCodigo === estadoCodigos.firmado">
-        <mat-expansion-panel-header class="expansion-style--header w-50">
-          <mat-panel-title class="expansion-style--title">
-            Detalle de modificación
-          </mat-panel-title>
-        </mat-expansion-panel-header>
 
         <div align="left" style="margin-top: 2em;">
           <mat-card class="border">
@@ -96,15 +88,29 @@
           </mat-card>
         </div>
 
-        <!--
+        <div class="text-center w-15">
+          <button mat-raised-button color="accent" class="btn-table"
+            (click)="getDdp( contratacion?.disponibilidadPresupuestal[0].disponibilidadPresupuestalId, contratacion?.disponibilidadPresupuestal[0].numeroDdp )">
+            Descargar DDP
+          </button>
+        </div>
+      </mat-expansion-panel>
+
+      <!--
+      <mat-expansion-panel class="expansion-style" *ngIf="estadoCodigo === estadoCodigos.firmado">
+        <mat-expansion-panel-header class="expansion-style--header w-50">
+          <mat-panel-title class="expansion-style--title">
+            Detalle de modificación
+          </mat-panel-title>
+        </mat-expansion-panel-header>
         <div class="text-center" style="width: 20%;display: inline-block;">
           <button mat-raised-button color="accent" class="btn-table" (click)="getDocumento( form.get( 'rutaDocumento' ).value )">
             Descargar documento
           </button>
         </div>
-        -->
 
       </mat-expansion-panel>
+      -->
     </mat-accordion>
   </div>
 
