--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-contratacion/form-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-contratacion/form-contratacion.component.html
@@ -178,7 +178,7 @@
       <mat-expansion-panel class="expansion-style">
         <mat-expansion-panel-header class="expansion-style--header w-50">
           <mat-panel-title class="expansion-style--title">
-            Clausulado
+            Consideraciones especiales
           </mat-panel-title>
         </mat-expansion-panel-header>
 
@@ -193,7 +193,7 @@
           <mat-card class="border">
             <mat-card-content class="mt-1em">
               <p>
-                La solicitud {{ dataContratacion.numeroSolicitud }} no cuenta con clausulados.
+                La solicitud {{ dataContratacion.numeroSolicitud }} no cuenta con consideraciones especiales.
               </p>
             </mat-card-content>
           </mat-card>
